changed endpoint routes
